--- a/css/about.css
+++ b/css/about.css
@@ -13,7 +13,7 @@
   width        : 70%;
   border-radius: 4px;
   display      : block;
-  height       : 80vh;
+  height       : auto;
 }
 
 .text {
