--- a/css/contact.css
+++ b/css/contact.css
@@ -94,3 +94,37 @@
     color           : #fff;
     background-color: #01143e;
 }
+.status{
+    /* color: red;
+    background-color: green; */
+    width: 50%;
+    margin: 5px auto;
+    text-align: center;
+    border-radius: 2px;
+    height: 20px;
+}
+#status.success{
+    background-color: rgb(211,250,153);
+    animation: status 4s ease forwards;
+}
+#status.error{
+    background-color: rgb(250,129,92);
+    animation: status 4s ease forwards;
+}
+
+@keyframes status{
+    0%{
+        opacity: 1;
+        pointer-events:all;
+    }
+
+      90%{
+        opacity: 1;
+        pointer-events:all;
+    }
+
+      100%{
+        opacity: 0;
+        pointer-events: none;
+    }
+}
